tests/error/poly_errors_py312/unsolved2.py
from guppylang.decorator import guppy


@guppy
def foo[x: bool]() -> bool:
    return x


@guppy
def main() -> None:
    foo()


main.compile()
