tests/error/poly_errors_py312/unsolved2.err
Error: Cannot infer generic parameter (at $FILE:11:4)
   | 
 9 | @guppy
10 | def main() -> None:
11 |     foo()
   |     ^^^^^ Cannot infer generic parameter `x` of this function

Note: Function signature is `forall x: bool. () -> bool`

Guppy compilation failed due to 1 previous error
